fixed overflow issue

--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -132,14 +132,14 @@ MODAL
     display: flex;
     align-items: center;
     justify-content: center;
-    visibility: hidden;
+    display: none;
     transition: all 300ms ease;
     opacity: 0;
     transform: translate(100%);
 }
 
 .menu--open .menu__backdrop {
-    visibility: visible;
+    display: flex;
     opacity: 1;
     transform: translate(0);
 }
